adcao de camada de persistencia no projetgo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 spring.application.name=clound-parking
 server.port=8085
 springdoc.api-docs.path=/api-docs
+
+
+
+
+# datasource PostgreSQL
+spring.datasource.url = jdbc:postgresql://localhost:5432/parking
+spring.datasource.username=postgres
+spring.datasource.password=teste12
+
+# jpa
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
